# libatombios

./: .gitignore  LICENSE  meson.build  meson_options.txt
inc/libatombios/: atom-debug.hpp  atom.hpp  extern-funcs.hpp
src/: atom-private.hpp  atom.cpp  bytecode.cpp  command.cpp  dumpToConsoles.cpp  iio.cpp  libatombios-frigg.hpp  mem.cpp
src-test/: main.cpp
subprojects/: cli11.wrap  frigg.wrap
